<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nestedGraph">

    <fragment
        android:id="@+id/navigation_Current_Orders"
        android:name="com.example.feedforward_association.ui.current_orders.CurrentOrdersFragment"
        android:label="@string/title_current_orders"
        tools:layout="@layout/fragment_current_orders" />

    <fragment
        android:id="@+id/navigation_history_orders"
        android:name="com.example.feedforward_association.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
    <navigation android:id="@+id/nestedGraph"
        app:startDestination="@id/navigation_home">
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.feedforward_association.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_navigation_home_to_chooseFoodFragment"
                app:destination="@id/chooseFoodFragment" />
        </fragment>
        <fragment
            android:id="@+id/chooseFoodFragment"
            android:name="com.example.feedforward_association.ui.home.ChooseFoodFragment"
            android:label="@string/title_choose_food"
            tools:layout="@layout/fragment_choose_food">
            <action
                android:id="@+id/action_chooseFoodFragment_to_navigation_home"
                app:destination="@id/mobile_navigation" />
        </fragment>
    </navigation>
</navigation>