<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.current_orders.CurrentOrdersFragment">

    <TextView
        android:id="@+id/TXT_Ongoing_Order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_current_orders"
        android:textAlignment="center"
        android:textSize="@dimen/txt_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RCV_Ongoing_Order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin_small"
        android:layout_marginBottom="@dimen/default_margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GRP_filter"
        tools:listitem="@layout/ongoing_item" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/GRP_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Ongoing_Order"
        app:selectionRequired="false"
        app:singleLine="true"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pending"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            app:chipStrokeColor="@color/status_pending" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ongoing"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_mid"
            android:text="@string/ongoing"
            app:chipStrokeColor="@color/status_ongoing" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_finished"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            app:chipStrokeColor="@color/status_finished" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>